pluralized 'photo' legend was missing in album

--- a/albums/templates/albums/albums.html
+++ b/albums/templates/albums/albums.html
@@ -68,7 +68,7 @@
               </div>
               {% endif %}
             </div>
-            <h3 class="mt-4 text-sm">{{ album.photo_count }} photos | {% blocktrans count counter=album.photo_count %}uploaded by{% plural %}uploaded by{% endblocktrans %} {{ album.creator.first_name }} </h3>
+            <h3 class="mt-4 text-sm">{{ album.photo_count }} photo{{album.photo_count|pluralize}} | {% blocktrans count counter=album.photo_count %}uploaded by{% plural %}uploaded by{% endblocktrans %} {{ album.creator.first_name }} </h3>
             <div class="flex flex-wrap gap-2">
               <p class="mt-1 text-lg font-medium">{{ album.title }}</p>
               {% if number_of_access|list_item:forloop.counter0 %}
