--- a/albums/templates/albums/albums.html
+++ b/albums/templates/albums/albums.html
@@ -10,7 +10,9 @@
 
 
 <div class="bg-base-100">
-  <div class="mx-auto max-w-2xl px-6 pt-16 sm:px-8 sm:pt-24 sm:pb-16 lg:max-w-7xl lg:px-8">
+
+  <div class="mx-auto max-w-2xl px-6 py-10 sm:px-8 sm:py-16 sm:pb-16 lg:max-w-7xl lg:px-8">
+
     {% if messages %}
     {% for message in messages %}
     <div class="my-6 alert alert-error mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
@@ -23,7 +25,7 @@
     {% endfor %}
     {% endif %}
 
-    <div class="grid grid-cols-1 xl:grid-cols-2 xl:gap-x-12">
+    <div class="flex flex-col w-full xl:flex-row justify-between">
       <!-- MY ALBUMS -->
       <div>
         <!-- TITLE -->
@@ -39,7 +41,7 @@
                 d="M2.37162 14.2378C3.54371 13.3886 5.09751 13 7 13C8.90249 13 10.4563 13.3886 11.6284 14.2378C12.8188 15.1004 13.4914 16.3477 13.795 17.8079C14.1811 19.6647 12.5708 21 11 21H3C1.42922 21 -0.181121 19.6647 0.204962 17.8079C0.508602 16.3477 1.18119 15.1004 2.37162 14.2378ZM3.54511 15.8574C2.84896 16.3618 2.39073 17.1203 2.16308 18.2151C2.12425 18.4018 2.17618 18.5729 2.31828 18.7223C2.47041 18.8824 2.71717 19 3 19H11C11.2828 19 11.5296 18.8824 11.6817 18.7223C11.8238 18.5729 11.8757 18.4018 11.8369 18.2151C11.6093 17.1203 11.151 16.3618 10.4549 15.8574C9.74039 15.3397 8.65185 15 7 15C5.34815 15 4.25961 15.3397 3.54511 15.8574Z">
               </path>
             </svg>
-            <a href="{% url 'albums:album_create' %}" class="btn btn-sm btn-outline">
+            <a href="{% url 'albums:album_create' %}" class="btn btn-outline btn-circle">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
@@ -91,12 +93,15 @@
         </div>
       </div>
 
+      <!-- DIVIDER -->
+      <div class="divider xl:divider-horizontal"></div>
+
 
       <!-- ALBUMS SHARED WITH ME -->
       {% if shared_albums_with_default_photos %}
       <div>
         <!-- TITLE -->
-        <div class="flex justify-between lg:justify-normal lg:gap-4">
+        <div class="flex justify-between lg:justify-normal lg:gap-4 max-xl:pt-10">
           <div class="py-2 flex gap-6 items-center">
             <h2 class="text-3xl font-bold tracking-tight">{% trans "Albums shared with you" %}</h2>
             <svg class="w-8 h-8 fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -116,7 +121,7 @@
           </div>
         </div>
         <!-- SHARED ALBUMS THUMBNAILS -->
-        <div class="pt-10 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-2 xl:gap-x-8">
+        <div class="py-10 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-2 xl:gap-x-8">
           {% for album, default_photo in shared_albums_with_default_photos.items %}
           <a href="{% url 'albums:album_detail' album.pk %}" class="group">
             <div
