--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -7,16 +7,18 @@
 {% block body %}
 <div class="hero min-h-screen -mt-8 sm:-mt-10" style="background-image: url(https://images.unsplash.com/photo-1528569937393-ee892b976859?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80);">
   <div class="hero-overlay bg-opacity-60"></div>
-  <div class="hero-content text-center text-neutral-content">
-    <div class="max-w-md">
-      <h1 class="mb-5 text-5xl font-bold">{% trans "Precious moments" %}</h1>
-      <p class="mb-5">
+  <div class="hero-content text-neutral-content">
+    <div class="max-w-lg">
+      <h1 class="mb-5 text-5xl text-center font-bold">{% trans "Precious moments" %}</h1>
+      <p class="my-8 px-4 text-justify">
         {% blocktrans %}
         A site dedicated to sharing old family photos. Dust off those old albums and bring them back to life! <br>
         This is a first version of the site: it's experimental and under development.Please bear with the author for any bugs 😇
         {% endblocktrans %}
       </p>
-      <a href="{% url 'accounts:login' %}" class="btn btn-accent">{% trans "Get Started" %}</a>
+      <div class=" flex place-content-center">
+        <a href="{% url 'accounts:login' %}" class="btn btn-accent">{% trans "Get Started" %}</a>
+      </div>
     </div>
   </div>
 </div>
