--- a/static/css/output.css
+++ b/static/css/output.css
@@ -1262,6 +1262,10 @@ html {
   left: 0;
 }
 
+.aspect-h-2 {
+  --tw-aspect-h: 2;
+}
+
 .alert {
   display: grid;
   width: 100%;
@@ -1454,6 +1458,12 @@ html {
   .btn[disabled],
   .btn:disabled {
   pointer-events: none;
+}
+
+.btn-square {
+  height: 3rem;
+  width: 3rem;
+  padding: 0px;
 }
 
 .btn-circle {
@@ -3712,6 +3722,18 @@ details.collapse summary::-webkit-details-marker {
   padding: 0px;
 }
 
+.btn-square:where(.btn-md) {
+  height: 3rem;
+  width: 3rem;
+  padding: 0px;
+}
+
+.btn-square:where(.btn-lg) {
+  height: 4rem;
+  width: 4rem;
+  padding: 0px;
+}
+
 .btn-circle:where(.btn-xs) {
   height: 1.5rem;
   width: 1.5rem;
@@ -4237,6 +4259,22 @@ details.collapse summary::-webkit-details-marker {
   top: auto;
 }
 
+.right-1\/2 {
+  right: 50%;
+}
+
+.left-1\/2 {
+  left: 50%;
+}
+
+.left-1\/3 {
+  left: 33.333333%;
+}
+
+.top-2\/3 {
+  top: 66.666667%;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -4295,6 +4333,10 @@ details.collapse summary::-webkit-details-marker {
 
 .m-1 {
   margin: 0.25rem;
+}
+
+.m-20 {
+  margin: 5rem;
 }
 
 .-mx-1 {
@@ -4643,6 +4685,10 @@ details.collapse summary::-webkit-details-marker {
   height: 1.5rem;
 }
 
+.h-60 {
+  height: 15rem;
+}
+
 .h-64 {
   height: 16rem;
 }
@@ -4677,6 +4723,18 @@ details.collapse summary::-webkit-details-marker {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-72 {
+  height: 18rem;
+}
+
+.h-80 {
+  height: 20rem;
+}
+
+.h-\[600px\] {
+  height: 600px;
 }
 
 .min-h-screen {
@@ -4738,6 +4796,22 @@ details.collapse summary::-webkit-details-marker {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.w-72 {
+  width: 18rem;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
+.w-\[600px\] {
+  width: 600px;
 }
 
 .min-w-0 {
@@ -4827,6 +4901,16 @@ details.collapse summary::-webkit-details-marker {
 
 .translate-y-0 {
   --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-2\/3 {
+  --tw-translate-y: -66.666667%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -5137,6 +5221,10 @@ details.collapse summary::-webkit-details-marker {
   border-top-width: 1px;
 }
 
+.border-dashed {
+  border-style: dashed;
+}
+
 .border-none {
   border-style: none;
 }
@@ -5202,6 +5290,11 @@ details.collapse summary::-webkit-details-marker {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-base-100 {
+  --tw-border-opacity: 1;
+  border-color: var(--fallback-b1,oklch(var(--b1)/var(--tw-border-opacity)));
 }
 
 .border-opacity-50 {
@@ -5389,6 +5482,18 @@ details.collapse summary::-webkit-details-marker {
 
 .p-8 {
   padding: 2rem;
+}
+
+.p-12 {
+  padding: 3rem;
+}
+
+.p-16 {
+  padding: 4rem;
+}
+
+.p-20 {
+  padding: 5rem;
 }
 
 .px-1 {
@@ -5704,6 +5809,10 @@ details.collapse summary::-webkit-details-marker {
 
 .tracking-wide {
   letter-spacing: 0.025em;
+}
+
+.tracking-tighter {
+  letter-spacing: -0.05em;
 }
 
 .text-amber-950 {
@@ -6321,6 +6430,10 @@ details.collapse summary::-webkit-details-marker {
   border-radius: 9999px;
 }
 
+.hover\:border-none:hover {
+  border-style: none;
+}
+
 .hover\:bg-base-300:hover {
   --tw-bg-opacity: 1;
   background-color: var(--fallback-b3,oklch(var(--b3)/var(--tw-bg-opacity)));
@@ -6501,10 +6614,6 @@ details.collapse summary::-webkit-details-marker {
 }
 
 @media not all and (min-width: 1280px) {
-  .max-xl\:pt-16 {
-    padding-top: 4rem;
-  }
-
   .max-xl\:pt-10 {
     padding-top: 2.5rem;
   }
@@ -6523,6 +6632,10 @@ details.collapse summary::-webkit-details-marker {
 @media not all and (min-width: 640px) {
   .max-sm\:mb-2 {
     margin-bottom: 0.5rem;
+  }
+
+  .max-sm\:hidden {
+    display: none;
   }
 
   .max-sm\:text-center {
@@ -6586,6 +6699,10 @@ details.collapse summary::-webkit-details-marker {
 
   .sm\:flex {
     display: flex;
+  }
+
+  .sm\:hidden {
+    display: none;
   }
 
   .sm\:h-12 {
@@ -7031,14 +7148,19 @@ details.collapse summary::-webkit-details-marker {
     flex-direction: row;
   }
 
-  .xl\:gap-x-12 {
-    -moz-column-gap: 3rem;
-         column-gap: 3rem;
-  }
-
   .xl\:gap-x-8 {
     -moz-column-gap: 2rem;
          column-gap: 2rem;
+  }
+
+  .xl\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
