--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -52,8 +52,9 @@
         <div class="relative">
 
           <!-- {{form.password}} -->
+          {% blocktranslate %}
           <input type="password" name="password" class="mt-1 w-full input input-bordered shadow-sm" id="pw" placeholder="Password" required="">
-
+          {% endblocktranslate %}
           <button type="button"  id="box" onclick ="reveal()" class="absolute inset-y-0 end-0 grid place-content-center px-4">
 
             <svg id="pwHide" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
@@ -77,6 +78,15 @@
         <button type="submit" class="btn btn-primary mt-2">{% trans "Sign in" %}</button>
       </div>
     </form>
+
+    {% if messages %}
+      {% for message in messages %}
+        <div role="alert" class="mt-6 alert {% if message.tags %} alert-{{message.tags}} {% endif %}">
+          <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+          <span>{{message}}</span>
+        </div>
+      {% endfor %}
+    {% endif %}
   </div>
 
   <div class="relative h-64 w-full sm:h-96 lg:h-full lg:w-1/2">
