added connection request modal confirmation

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -92,6 +92,7 @@
       {% endfor %}
     {% endif %}
   </div>
+  {# <p class="alert alert-error"></p> #}
 
   <div class="relative h-64 w-full sm:h-96 lg:h-full lg:w-1/2">
     <img alt="Welcome" src="https://images.unsplash.com/photo-1632679760635-55966a6e3d42?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80" class="absolute inset-0 h-full w-full object-cover"/>
